--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.22",
     "postcss": "^8.5.6",
